--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.5
-  supabase_auth_ui: ^0.4.3
   go_router: ^13.2.2
   supabase_flutter: ^2.4.0
   envied: ^0.5.4+1
@@ -40,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   equatable: ^2.0.5
   dartz: ^0.10.1
+  get_it: ^7.6.8
 
 dev_dependencies:
   flutter_test:
