--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   get_it: ^7.6.8
+  hive: ^2.2.3
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
