--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,7 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^7.6.8
   hive: ^2.2.3
-  isar_flutter_libs: ^3.1.0+1
-  path_provider: ^2.1.2
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
