--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   get_it: ^7.6.8
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  shared_preferences: ^2.2.2
+  json_types: ^3.0.1
 
 dev_dependencies:
   flutter_test:
