--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   web_socket_channel: ^2.2.0
   parse_json: ^2.2.3
   async: ^2.11.0
+  random_avatar: ^0.0.8
 
 dev_dependencies:
   flutter_test:
